# jobplatform-fastapi

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README (1).md  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
app/: .dockerignore  alembic.ini  main.py  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 233263f4477e_change_user_model.py  4c9678df4db7_add_google_auth_fields_to_user.py  dba2e02a6552_add_availabilty_in_job_model.py
app/api/: auth.py
app/config/: gunicorn_conf.py  logging_config.py
app/core/: dependencies.py  security.py
app/database/: base.py  session.py
app/models/: application.py  job.py  notification.py  resume.py  review.py  savedjob.py  user.py  userprofile.py
app/repository/: application.py  applicationwithresumeparser.py  job.py  review.py  userprofile.py
app/routes/: application.py  applicationwithresumeparser.py  job.py  review.py  userprofile.py
app/schemas/: application.py  job.py  resume.py  review.py  user.py  userprofile.py
app/utils/: pyresparser_config.py  resume_parser.py
env/: pyvenv.cfg
tests/: test_health.py
uploads/resumes/: 6b4929b8-1034-41bb-85da-20667781a34b_NjorogeJosephKimenyu_CV.docx
